gom: Fix AND/OR filters memory handling

The values were getting double-freed. As gom_filter_get_values() returns
a new array, no need to stuff it inside another array that we would
create ourselves, just use that original array.

https://bugzilla.gnome.org/show_bug.cgi?id=731701